[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://maps/Outrolos_space_reset.gd" type="Script" id=2]
[ext_resource path="res://assets/Backblack.jpg" type="Texture" id=3]
[ext_resource path="res://fonts/intro.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/dizzy.jpg" type="Texture" id=5]
[ext_resource path="res://assets/flowy.jpg" type="Texture" id=6]
[ext_resource path="res://sounds/Mario Dead Sound Effects.wav" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[node name="Outrolose_powrot_do_menu" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1264.96, 640.04 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 328 )
scale = Vector2( 1.51176, 1.2524 )

[node name="tryagain" type="Label" parent="."]
visible = false
margin_left = 176.0
margin_top = 64.0
margin_right = 358.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0117647, 0.831373, 0.00784314, 1 )
custom_colors/font_outline_modulate = Color( 0.721569, 0, 0, 1 )
text = "Jeszcze raz ? :)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="tryagain"]
margin_left = 32.0
margin_top = 80.0
margin_right = 136.0
margin_bottom = 100.0
text = "AGAIN - F"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Label" parent="tryagain"]
margin_left = 368.0
margin_right = 670.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.0156863, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
text = "Powrót do menu
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttonmenu" type="Button" parent="tryagain/Menu"]
margin_left = 104.0
margin_top = 72.0
margin_right = 208.0
margin_bottom = 92.0
text = "Menu - G"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="tryagain"]
margin_left = 183.837
margin_top = -55.0
margin_right = 514.837
margin_bottom = -6.0
custom_fonts/font = ExtResource( 4 )
text = "Przegrałeś"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="tryagain"]
position = Vector2( 96.0713, 332.154 )
scale = Vector2( 2.66152, 2.62926 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 176.701, 153.472, 40.1396, 40.8647 )
region_filter_clip = true

[node name="Label2" type="Label" parent="tryagain/Sprite"]
margin_left = -92.2113
margin_top = 23.9892
margin_right = 272.789
margin_bottom = 72.9892
custom_fonts/font = ExtResource( 4 )
text = "Nie poddawaj się"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="tryagain"]
position = Vector2( 491.555, 334.986 )
scale = Vector2( 2.66152, 2.62926 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( 176.701, 153.472, 40.1396, 40.8647 )
region_filter_clip = true

[node name="Sprite3" type="Sprite" parent="tryagain"]
position = Vector2( 303.871, 222.15 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 6 )
region_enabled = true
region_rect = Rect2( 76.6394, 68.0529, 848.009, 872.966 )

[node name="Wyjście" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Wyjście"]
margin_right = 12.0
margin_bottom = 20.0

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true
[connection signal="pressed" from="tryagain/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="tryagain/Menu/Buttonmenu" to="." method="_on_Buttonmenu_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
